[project]
name = "qibo-docs-mcp"
version = "0.1.0"
description = "MCP server for qibo, qibolab and qibocal documentation retrieval and search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.8.1",
    "httpx>=0.28.1",
    "html2text>=2020.1.16",
    "docutils>=0.21",
]

[[project.authors]]
name = "qiboteam"

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/qiboteam/qibo-docs-mcp"
Repository = "https://github.com/qiboteam/qibo-docs-mcp"

[project.scripts]
qibo-docs-mcp = "qibo_docs_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qibo_docs_mcp"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
